# PDF-to-MD-Converter

./: .env.example  .gitignore  README.md  init_project.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_azure_test.sh  setup.sh
.cache/41/: cache.db
PDF-to-MD-converter/: README.md  requirements.txt
output/: 2_DMAIO-Application-Observability-Edge-Deployed-Solutions-270325-191742.md  DMAIO-Application-Observability-Edge-Deployed-Solutions-270325-191742.md  DMAIO-Application-Observability-for-Edge-Deployed-Solutions-270325-191742.md  DMAIO-ST-One-Data-Feed-Kubernetes-Edge-270325-191539.md  Data-Feed-Kubernetes-scrubbed  Data-Feed-Kubernetes-scrubbed.md
src/: run_converter.py  test_azure_openai.py
src/output/: DIGITAL-Spike_ Design Data Quality Solution-270325-192328.md  DIGITAL-Spike_ Evaluate Spark Engine in Azure Fabric-270325-192159.md  DMAIO-Operational-Observability-270325-191716.md
src/pdf_to_markdown_autogen/: PROJECT_DOCUMENTATION.md  Project_Context_for_AI.md  README.md  __init__.py  agents.py  ai_processor.py  config.py  converter.py  init_autogen.sh  pyproject.toml  run.py  run_autogen.py  version.py
src/pdf_to_markdown_autogen/.cache/41/: cache.db
src/pdf_to_markdown_autogen/agents/: __init__.py  md_processor.py  md_validator.py  pdf_extractor.py
src/pdf_to_markdown_autogen/pdf_to_markdown_autogen/: ai_processor.py  config.py  run_autogen.py
src/pdf_to_markdown_original/: README.md  __init__.py  __main__.py  init_original.sh  pdf_to_markdown.py  processor.py  pyproject.toml  requirements.txt  run.py
